Added Repository/UnitOfWork interfaces (DAL)

--- a/DAL/DAL.csproj
+++ b/DAL/DAL.csproj
@@ -20,8 +20,10 @@
   </ItemGroup>
   <ItemGroup>
     <None Remove="Entities\" />
+    <None Remove="Interfaces\" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Entities\" />
+    <Folder Include="Interfaces\" />
   </ItemGroup>
 </Project>
