Implemented Repository/UnitOfWork interfaces (DAL)

--- a/DAL/DAL.csproj
+++ b/DAL/DAL.csproj
@@ -23,11 +23,13 @@
     <None Remove="Interfaces\" />
     <None Remove="Data\" />
     <None Remove="Configuration\" />
+    <None Remove="Repositories\" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Entities\" />
     <Folder Include="Interfaces\" />
     <Folder Include="Data\" />
     <Folder Include="Configuration\" />
+    <Folder Include="Repositories\" />
   </ItemGroup>
 </Project>
