--- a/BLL/BLL.csproj
+++ b/BLL/BLL.csproj
@@ -24,5 +24,6 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Http" Version="2.2.2" />
     <PackageReference Include="Microsoft.AspNetCore.Hosting" Version="2.2.7" />
+    <PackageReference Include="X.PagedList" Version="8.4.7" />
   </ItemGroup>
 </Project>
