--- a/MVCWebApp/appsettings.json
+++ b/MVCWebApp/appsettings.json
@@ -6,6 +6,10 @@
   "StaticFilesSection": {
     "Path": "Images"
   },
+  "PaginationSettings": {
+    "PageNumber": 1,
+    "PageSize": 5
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
