--- a/MVCWebApp/appsettings.json
+++ b/MVCWebApp/appsettings.json
@@ -1,14 +1,33 @@
 {
   "ConnectionStrings": {
     "ProductManagerDbConnection": "Data Source=localhost;Initial Catalog=ProductManagerDb;User ID=sa;Password=P@ssword;TrustServerCertificate=True;",
-    "IdentityProductManagerDbConnection": "Data Source=localhost;Initial Catalog=IdentityProductManagerDb;User ID=sa;Password=P@ssword;TrustServerCertificate=True;MultipleActiveResultSets=true"
+    "IdentityProductManagerDbConnection": "Data Source=localhost;Initial Catalog=IdentityProductManagerDb;User ID=sa;Password=P@ssword;TrustServerCertificate=True;MultipleActiveResultSets=true",
+    "HangfireProductManagerDbConnection": "Data Source=localhost;Initial Catalog=HangfireProductManagerDb;User ID=sa;Password=P@ssword;TrustServerCertificate=True;MultipleActiveResultSets=true"
   },
   "StaticFilesSection": {
     "Path": "Images"
   },
+  "ShopSection": {
+    "Name": "MVCWebApp",
+    "BaseUrl": "https://localhost:7292"
+  },
+  "AdminSettings": {
+    "Email": "admin@gmail.com",
+    "Password": "Qwerty_1"
+  },
   "PaginationSettings": {
     "PageNumber": 1,
     "PageSize": 5
+  },
+  "MailSettings": {
+    "DisplayName": "Angel Kemmer",
+    "From": "angel33@ethereal.email",
+    "Host": "smtp.ethereal.email",
+    "Password": "u5rwraaEtN4hqcq4nr",
+    "Port": 587,
+    "UserName": "angel33@ethereal.email",
+    "UseSSL": false,
+    "UseStartTls": true
   },
   "Logging": {
     "LogLevel": {
