--- a/BLL/BLL.csproj
+++ b/BLL/BLL.csproj
@@ -25,5 +25,7 @@
     <PackageReference Include="Microsoft.AspNetCore.Http" Version="2.2.2" />
     <PackageReference Include="Microsoft.AspNetCore.Hosting" Version="2.2.7" />
     <PackageReference Include="X.PagedList" Version="8.4.7" />
+    <PackageReference Include="MailKit" Version="4.3.0" />
+    <PackageReference Include="Hangfire" Version="1.8.10" />
   </ItemGroup>
 </Project>
