Added authorization for hangfire dashboard

--- a/MVCWebApp/MVCWebApp.csproj
+++ b/MVCWebApp/MVCWebApp.csproj
@@ -25,6 +25,7 @@
     <None Remove="Areas\Admin\Models\" />
     <None Remove="Areas\Admin\Views\Subscription\" />
     <None Remove="Helpers\" />
+    <None Remove="Filters\" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Diagnostics.EntityFrameworkCore" Version="8.0.1" />
@@ -71,6 +72,7 @@
     <Folder Include="Areas\Admin\Models\" />
     <Folder Include="Areas\Admin\Views\Subscription\" />
     <Folder Include="Helpers\" />
+    <Folder Include="Filters\" />
   </ItemGroup>
   <ItemGroup>
     <Content Remove="wwwroot\Images\" />
