--- a/BLL/BLL.csproj
+++ b/BLL/BLL.csproj
@@ -27,5 +27,6 @@
     <PackageReference Include="X.PagedList" Version="8.4.7" />
     <PackageReference Include="MailKit" Version="4.3.0" />
     <PackageReference Include="Hangfire" Version="1.8.10" />
+    <PackageReference Include="Azure.Storage.Blobs" Version="12.19.1" />
   </ItemGroup>
 </Project>
