--- a/MVCWebApp/appsettings.json
+++ b/MVCWebApp/appsettings.json
@@ -7,6 +7,7 @@
   "StaticFilesSection": {
     "Path": "Images"
   },
+  "ImagesSetting": "local",
   "ShopSection": {
     "Name": "MVCWebApp",
     "BaseUrl": "https://localhost:7292"
